--- a/Examples and tests/example collecrions_counter.ipynb
+++ b/Examples and tests/example collecrions_counter.ipynb
@@ -151,14 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'black': 2, 'yellow': 1, 'white': -1, 'red': -2})\n"
+      "Counter({'black': 2, 'yellow': 1, 'white': -1, 'red': -2})\n",
+      "2\n"
      ]
     }
    ],
